--- a/Lweight.css
+++ b/Lweight.css
@@ -11,9 +11,6 @@ input[type="password"],
   line-height: 20px;
   color: #555555;
   vertical-align: middle;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
 }
 input,
 textarea,
@@ -48,11 +45,69 @@ input[type="password"]:focus,
      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-.help-inline{
-color: #B94A48;
+
+textarea.error,
+input[type="text"].error,
+input[type="password"].error,
+.uneditable-input.error {
+  border-color: #ff8888;
+  /*background-color: #fff5f5;*/
+  outline: 0;
+  outline: thin dotted \9;
+  /* IE6-9 */
+
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 92, 92, 0.6);
+     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 92, 92, 0.6);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 92, 92, 0.6);
 }
 
+textarea.right,
+input[type="text"].right,
+input[type="password"].right,
+.uneditable-input.right {
+  border-color: #7bd22e;
+  /*background-color: #f2ffe5;*/
+  outline: 0;
+  outline: thin dotted \9;
+  /* IE6-9 */
 
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(150, 255, 70, 0.6);
+     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(150, 255, 70, 0.6);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(150, 255, 70, 0.6);
+}
+
+.help-inline{
+color: #B94A48; font-size: 12px; padding:5px 5px 5px 5px;
+}
+.help-inline.error,.help-inline.pointError,.help-inline.point,.help-inline.passWord1,.help-inline.passWord2,.help-inline.passWord3
+{
+  background-image: url(pwd_sprite.png) ;
+  background-repeat: no-repeat;
+}
+.help-inline.error{
+  background-position:  2px -203px;
+  padding-left: 20px;
+}
+.help-inline.pointError{
+  background-position: 2px -237px;
+  padding-left: 20px;
+}
+.help-inline.point{
+  background-position: 2px -137px;
+  padding-left: 20px; color:#7699c6;
+}
+.help-inline.passWord1{
+  background-position: 2px -18px;
+  padding-left: 70px; color:#ff9c3a;
+}
+.help-inline.passWord2{
+  background-position: 2px -60px;
+  padding-left: 70px; color:#45ac07;
+}
+.help-inline.passWord3{
+  background-position: 2px -106px;
+  padding-left: 70px;color:#45ac07;
+}
 
 select,
 input[type="file"] {
@@ -94,8 +149,3 @@ select {
   margin-left: 180px;
   *margin-left: 0;
 }
-
-
-
-
-
