--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,10 @@
 /*******************************************************************************
-
+/* =========================================================
+ * jquery-Lightweight-validation.js 
+ * Original Idea: (Copyright 2013 Stefan Petre)
+ * Updated by ¥Û√® 
+ * version 1.0.1 beta
+ * =========================================================
 *******************************************************************************/
 
 @import url(pygment_trac.css);
